Banner section on mobile fixed

--- a/styles.css
+++ b/styles.css
@@ -74,8 +74,10 @@ header {
   }
 
   .boxRight {
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     height: 300px;
+    background-image: url("images/bg-intro-mobile.svg");
+    background-position: 0 -80px;
     overflow: hidden;
   }
 
@@ -451,6 +453,12 @@ FOOTER */
 
   .benefits_boxes {
     text-align: center;
+  }
+
+  .phones {
+    width: 350px;
+    height: 450px;
+    object-position: 0px -130px;
   }
 }
 
